# Titanic-Survival

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01-eda.ipynb  titanic_prediction.ipynb
titanic_survival_prediction/: __init__.py  dataset.py  features.py  plots.py
titanic_survival_prediction/modeling/: predict.py  train.py
