[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "titanic_survival_prediction"
version = "0.0.1"
description = "this project will predict the survival of a person onboarded on titanic"
authors = [
  { name = "Urvi Gada" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["titanic_survival_prediction"]
include = ["pyproject.toml", "titanic_survival_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["titanic_survival_prediction"]
force-sort-within-sections = true

